Fix byline spacing

--- a/html/style.css
+++ b/html/style.css
@@ -101,7 +101,7 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        width: 50%;
+        width: 60%;
         border-radius: 20px;
         text-decoration: none;
         color: var(--spaceblue);
